# we_better_worked

./: .gitignore  Cargo.toml  README.md  file_structure_plan.txt  learning.txt
.sqlx/: query-076cc1d95018fe97c096fc7af8990aa11157f25b7a566968ed6668ff27ab15c3.json  query-0fdbfcb37e13139920e9312892faab70fb1035f9775639b5cf25bacdcbee0285.json  query-1011c852dbb1ab77bd4723692134cd53d102d981e600b69a2487aa7b01e91dac.json  query-31af6cb48151282a8c6c74179f41c6acd9f0b68871bf8d84115ebac5f99babb0.json  query-4d2b9ff9f6823d21d32cf3e6b3ce2a4715e71097bed966562a10ee8ce1ce056b.json  query-82dda2ec75c09105d1f2591b16541a90f714ae2f7d3d54c853a88230e1f56093.json  query-8e12e788fbaefadaf11b3e751630b6b0fc4518e32db044e91d84d896d9f5833b.json  query-d587f5f5e494fc9d0253fb1912f9037756bd88c3bc0da45914be0d27aaa8aa8e.json  query-df029403db9dc83a31b4dd0b0f9553e3227d11860f2067e2cf9b4af02d00a2d5.json
db/: we_better_worked.db  we_better_worked.db~
db/migrations/: 0001_initial_schema.sql
migrations/: 0001_initial_schema.sql
src/: main.rs
src/db/: connection.rs
src/db/migrations/: 0001_initial_schema.sql
src/models/: customer.rs  mod.rs  user.rs
src/queries/: customer.rs  mod.rs  user.rs  user_queries.rs
src/services/: user_service.rs
