[package]
name = "we_better_worked"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "macros",
    "chrono"
] }
tokio = { version = "1.46.1", features = ["rt", "macros"] }
chrono = { version = "0.4.41",features = ["serde"] }
serde ={ version = "1.0.219"}

